Fixed squished help logo on mobile devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -660,5 +660,5 @@ code {
 
 .logo {
 	width: 500px;
-	height: 318px;
+	height: auto;
 }
